# zotero_api_rs

./: Cargo.toml
.github/workflows/: code_quality.yml  coverage.yml  test.yml
src/: error.rs  lib.rs  zotero_api.rs
